Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-6631
Items using anchors.fill or anchors.centerIn aren't updated when the margin/offsets they use are changed.
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
Not Evaluated
Fix Version/s:
Some future release
Affects Version/s:
4.6.0
Component/s:
QML: Declarative and Javascript Engine
Labels:
None
Commits:
8d3596f
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
anchorbug.qml
0.3 kB
09 Dec '09 04:29
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Alan Alpert (closed Nokia identity) (Inactive)
Reporter:
Michael Brasser (closed Nokia identity) (Inactive)
Votes:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
09 Dec '09 04:29
Updated:
14 Dec '09 06:42
Resolved:
10 Dec '09 11:37
Gerrit Reviews
There are no open Gerrit changes