Update centerIn when center offsets change

Also adds functionality to update fill when margins change.

Task-number: QTBUG-6631